--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,8 @@
 # Configure Using Gemfile
 # gem "pg"
 #
+
+# https://www.postgresql.org/docs/current/sql-createdatabase.html
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -23,6 +25,10 @@ default: &default
 development:
   <<: *default
   database: blog_development
+  host: localhost
+  username: postgres
+  password: password
+
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,6 +63,9 @@ development:
 test:
   <<: *default
   database: blog_test
+  host: localhost
+  username: postgres
+  password: password
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
