--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ development:
   database: blog_development
   host: localhost
   username: postgres
-  password: password
+  password: postgres
 
 
   # The specified database role being used to connect to PostgreSQL.
@@ -65,7 +65,7 @@ test:
   database: blog_test
   host: localhost
   username: postgres
-  password: password
+  password: postgres
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
