--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432
         run: |
+          # test
           bin/rails db:create
           bin/rails db:schema:load
           bundle exec rspec
