--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,22 @@ jobs:
 
     steps:
       - name: Install packages
-        run: sudo apt-get update && sudo apt-get install --no-install-recommends -y google-chrome-stable curl libjemalloc2 libvips postgresql-client
+        run: |
+          # google chrome: https://www.ubuntuupdates.org/ppa/google_chrome
+          mkdir -p /etc/apt/keyrings
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo tee /etc/apt/keyrings/google.asc >/dev/null
+          sudo sh -c 'echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/google.asc] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+
+          # rails generated installation
+          sudo apt-get update && sudo apt-get install --no-install-recommends -y google-chrome-stable curl libjemalloc2 libvips postgresql-client
+
+      - name: Install Packages for Ruby Setup
+        run: |
+          # pg: libq-dev
+          # psych: libyaml-dev
+          sudo apt-get install -y \
+            libpq-dev \
+            libyaml-dev
 
       - name: Checkout code
         uses: actions/checkout@v4
