--- a/.github/workflows/gh-app-workflow.yml
+++ b/.github/workflows/gh-app-workflow.yml
@@ -2,6 +2,8 @@ name: GH-App AutoWorkflow
 
 on:
   workflow_dispatch:
+  schedule:
+  - cron: "0 17 * * 0"    
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
